[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
miette = { version = "7.1.0", features = ["fancy"] }
thiserror = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
